# Sodigy

./: .gitignore  Build.md  Cargo.toml  Characters.md  Compiler.md  Errors.md  Format.md  LICENSE  Language.md  LanguageDesign.md  Portability.md  Purity.md  README.md  TODO.md  clean.nu  dirty_closures.sdg  dump.rs  errors.md  examples.md  impls.rs  link_bin.nu  materials.md  prelude.sdg  sodigy  spec-old.md  spec.md  state_machine.rs  test.py  tests.nu  tests.py  tests.sdg  tests_fp.sdg  tt.sdg  type-solver.rs
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  interpreter.rs  lib.rs  python.rs
crates/backend/src/interpreter/: heap.rs
crates/driver/: Cargo.toml
crates/driver/src/: cli.rs  command.rs  compile_stage.rs  error.rs  global_context.rs  ir_store.rs  lib.rs  log.rs  timings.rs  worker.rs
crates/driver/src/timings/: graph.rs  style.css
crates/error/: Cargo.toml
crates/error/src/: dump.rs  endec.rs  error.rs  kind.rs  level.rs  lib.rs  lint.rs  proc_macro.rs  render.rs  tests.rs  token.rs  util.rs  warning.rs
crates/error/src/kind/: render.rs
crates/hir/: Cargo.toml
crates/hir/src/: alias.rs  assert.rs  assoc.rs  attribute.rs  block.rs  closure.rs  dump.rs  endec.rs  enum.rs  eval.rs  expr.rs  func.rs  if.rs  item_shape.rs  let.rs  lib.rs  match.rs  module.rs  name.rs  path.rs  pattern.rs  poly.rs  prelude.rs  session.rs  struct.rs  tests.rs  type.rs  use.rs
crates/hir/src/attribute/: decorator_docs.rs
crates/hir/src/dump/: assert.rs  attribute.rs  expr.rs  func.rs  let.rs  pattern.rs  type.rs
crates/hir/src/endec/: alias.rs  assert.rs  assoc.rs  attribute.rs  block.rs  closure.rs  enum.rs  expr.rs  func.rs  if.rs  let.rs  match.rs  module.rs  path.rs  pattern.rs  poly.rs  session.rs  struct.rs  type.rs  use.rs
crates/hir/src/expr/: pipeline.rs
crates/hir/src/pattern/: dispatch.rs  from_expr.rs  or.rs
crates/inter-hir/: Cargo.toml
crates/inter-hir/src/: alias.rs  assoc.rs  endec.rs  expr.rs  lib.rs  module.rs  path.rs  pattern.rs  poly.rs  session.rs  type.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: debug.rs  heap.rs  lib.rs  stack.rs
crates/interpreter/src/heap/: debug.rs
crates/lex/: Cargo.toml
crates/lex/src/: endec.rs  lib.rs  session.rs  token.rs
crates/lir/: Cargo.toml
crates/lir/src/: assert.rs  bytecode.rs  endec.rs  executable.rs  expr.rs  func.rs  let.rs  lib.rs  session.rs  value.rs
crates/lir/src/endec/: bytecode.rs  executable.rs  func.rs  session.rs  value.rs
crates/mir/: Cargo.toml
crates/mir-type/: Cargo.toml
crates/mir-type/src/: error.rs  lib.rs  log.rs  mono.rs  poly.rs  preludes.rs  solver.rs
crates/mir-type/src/endec/: session.rs
crates/mir-type/src/solver/: assert.rs  expr.rs  func.rs  let.rs  pattern.rs
crates/mir/src/: assert.rs  block.rs  dump.rs  endec.rs  enum.rs  expr.rs  func.rs  global_context.rs  if.rs  intrinsic.rs  let.rs  lib.rs  match.rs  pattern.rs  session.rs  struct.rs  tests.rs  type.rs
crates/mir/src/dump/: assert.rs  expr.rs  func.rs  let.rs  type.rs
crates/mir/src/endec/: assert.rs  enum.rs  expr.rs  func.rs  let.rs  pattern.rs  session.rs  struct.rs  type.rs
crates/mir/src/expr/: dispatch.rs
crates/mir/src/session/: item_map.rs  span_string_map.rs
crates/number-eval/: Cargo.toml
crates/number-eval/src/: lib.rs
crates/optimize/: Cargo.toml
crates/optimize/src/: bytecode.rs  lib.rs  mir.rs
crates/parse/: Cargo.toml
crates/parse/src/: alias.rs  assert.rs  attribute.rs  block.rs  check.rs  decl.rs  deco.rs  endec.rs  enum.rs  expr.rs  func.rs  if.rs  lambda.rs  let.rs  lib.rs  match.rs  module.rs  path.rs  pattern.rs  session.rs  struct.rs  tests.rs  tokens.rs  type.rs  use.rs
crates/parse/src/check/: block.rs  (+13 more)
crates/post-mir/: Cargo.toml
crates/post-mir/src/: error.rs  field.rs  lib.rs  match.rs  session.rs
crates/sodigy_ast/: Cargo.toml
crates/sodigy_ast/src/: endec.rs  err.rs  error.rs  expr.rs  fmt.rs  json.rs  lang_item.rs  let_.rs  lib.rs  ops.rs  parse.rs  pattern.rs  session.rs  stmt.rs  tests.rs  tokens.rs  utils.rs  value.rs  warn.rs
crates/sodigy_attribute/: Cargo.toml
crates/sodigy_attribute/src/: endec.rs  fmt.rs  lib.rs
crates/sodigy_clap/: Cargo.toml
crates/sodigy_clap/src/: arg.rs  error.rs  flag.rs  lex.rs  lib.rs  parse.rs  session.rs  stages.rs  token.rs  warn.rs
crates/sodigy_endec/: Cargo.toml
crates/sodigy_endec/src/: err.rs  error.rs  impls.rs  int.rs  json.rs  lib.rs  no_cycle.rs  session.rs  tests.rs
crates/sodigy_error/: Cargo.toml
crates/sodigy_error/src/: ctxt.rs  dist.rs  expected_token.rs  extra_info.rs  fmt.rs  lib.rs  stage.rs  universal.rs
crates/sodigy_high_ir/: Cargo.toml
crates/sodigy_high_ir/src/: attr.rs  doc_comment.rs  endec.rs  enum_.rs  err.rs  error.rs  expr.rs  fmt.rs  func.rs  lib.rs  module.rs  names.rs  pattern.rs  scope.rs  session.rs  struct_.rs  walker.rs  warn.rs
crates/sodigy_intern/: Cargo.toml
crates/sodigy_intern/src/: endec.rs  global.rs  lib.rs  number.rs  numeric.rs  prelude.rs  session.rs  string.rs  tests.rs
crates/sodigy_interpreter/: Cargo.toml
crates/sodigy_interpreter/src/: data.rs  hir.rs  lib.rs
crates/sodigy_lex/: Cargo.toml
crates/sodigy_lex/src/: endec.rs  err.rs  error.rs  lib.rs  num.rs  session.rs  tests.rs  token.rs  warn.rs
crates/sodigy_mid_ir/: Cargo.toml
crates/sodigy_mid_ir/src/: def.rs  error.rs  expr.rs  func.rs  lib.rs  lower.rs  prelude.rs  session.rs  ty.rs  ty_class.rs  walker.rs  warn.rs
crates/sodigy_parse/: Cargo.toml
crates/sodigy_parse/src/: delim.rs  err.rs  error.rs  formatted_str.rs  id_with_span.rs  lib.rs  punct.rs  session.rs  tests.rs  token_tree.rs  warn.rs
crates/sodigy_session/: Cargo.toml
crates/sodigy_session/src/: endec.rs  lib.rs
crates/sodigy_span/: Cargo.toml
crates/sodigy_span/src/: endec.rs  fmt.rs  lib.rs  render.rs
crates/token/: Cargo.toml
crates/token/src/: constant.rs  delim.rs  endec.rs  error.rs  keyword.rs  lib.rs  op.rs  punct.rs  tests.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: cnr.rs  empty.rs  fuzz_target_1.rs
fuzz/src/: lib.rs
(+1011 files in other folders)
