[package]
name = "sodigy"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-backend = { version = "0.1.0", path = "crates/backend" }
sodigy-error = { version = "0.1.0", path = "crates/error" }
sodigy-file = { version = "0.1.0", path = "crates/file" }
sodigy-fs-api = { version = "0.1.0", path = "crates/fs-api" }
sodigy-hir = { version = "0.1.0", path = "crates/hir" }
sodigy-lex = { version = "0.1.0", path = "crates/lex" }
sodigy-lir = { version = "0.1.0", path = "crates/lir" }
sodigy-mir = { version = "0.1.0", path = "crates/mir" }
sodigy-parse = { version = "0.1.0", path = "crates/parse" }
sodigy-session = { version = "0.1.0", path = "crates/session" }
sodigy-span = { version = "0.1.0", path = "crates/span" }
sodigy-string = { version = "0.1.0", path = "crates/string" }

# TODO: replace these with sodigy-based code
hgp = { version = "0.1.0", path = "../hgp" }
ragit-cli = "0.4.4"
