[package]
name = "sodigy"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-backend = { version = "0.1.0", path = "crates/backend" }
sodigy-error = { version = "0.1.0", path = "crates/error" }
sodigy-endec = { version = "0.1.0", path = "crates/endec" }
sodigy-file = { version = "0.1.0", path = "crates/file" }
sodigy-fs-api = { version = "0.1.0", path = "crates/fs-api" }
sodigy-hir = { version = "0.1.0", path = "crates/hir" }
sodigy-inter-hir = { version = "0.1.0", path = "crates/inter-hir" }
sodigy-interpreter = { version = "0.1.0", path = "crates/interpreter" }
sodigy-lex = { version = "0.1.0", path = "crates/lex" }
sodigy-lir = { version = "0.1.0", path = "crates/lir" }
sodigy-mir = { version = "0.1.0", path = "crates/mir" }
sodigy-mir-type = { version = "0.1.0", path = "crates/mir-type" }
sodigy-name-analysis = { version = "0.1.0", path = "crates/name-analysis" }
sodigy-parse = { version = "0.1.0", path = "crates/parse" }
sodigy-post-mir = { version = "0.1.0", path = "crates/post-mir" }
sodigy-session = { version = "0.1.0", path = "crates/session" }
sodigy-span = { version = "0.1.0", path = "crates/span" }
sodigy-string = { version = "0.1.0", path = "crates/string" }

# TODO: I want everything to be inside this repository
ragit-cli = "0.4.4"

[features]
debug-bytecode = ["sodigy-interpreter/debug-bytecode"]
debug-heap = ["sodigy-interpreter/debug-heap"]
