[package]
name = "sodigy-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sodigy-driver = { path = "../crates/driver" }
sodigy-fs-api = { path = "../crates/fs-api" }

[dependencies.sodigy]
path = ".."

[[bin]]
name = "cnr"
path = "fuzz_targets/cnr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "empty"
path = "fuzz_targets/empty.rs"
test = false
doc = false
bench = false
