[package]
name = "sodigy-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-fs-api = { version = "0.1.0", path = "../fs-api" }
sodigy-lir = { version = "0.1.0", path = "../lir" }
sodigy-mir = { version = "0.1.0", path = "../mir" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
