[package]
name = "sodigy-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-cli = { version = "0.1.0", path = "../cli" }
sodigy-code-gen = { version = "0.1.0", path = "../code-gen" }
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-optimize = { version = "0.1.0", path = "../optimize" }
