[package]
name = "sodigy-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-bytecode = { version = "0.1.0", path = "../bytecode" }
sodigy-cli = { version = "0.1.0", path = "../cli" }
sodigy-code-gen = { version = "0.1.0", path = "../code-gen" }
sodigy-endec = { version = "0.1.0", path = "../endec" }
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-file = { version = "0.1.0", path = "../file" }
sodigy-fs-api = { version = "0.1.0", path = "../fs-api" }
sodigy-hir = { version = "0.1.0", path = "../hir" }
sodigy-inter-hir = { version = "0.1.0", path = "../inter-hir" }
sodigy-inter-mir = { version = "0.1.0", path = "../inter-mir" }
sodigy-interpreter = { version = "0.1.0", path = "../interpreter" }
sodigy-lex = { version = "0.1.0", path = "../lex" }
sodigy-mir = { version = "0.1.0", path = "../mir" }
sodigy-name-analysis = { version = "0.1.0", path = "../name-analysis" }
sodigy-optimize = { version = "0.1.0", path = "../optimize" }
sodigy-parse = { version = "0.1.0", path = "../parse" }
sodigy-post-mir = { version = "0.1.0", path = "../post-mir" }
sodigy-prettify = { version = "0.1.0", path = "../prettify" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }

[features]
debug-bytecode = ["sodigy-interpreter/debug-bytecode"]
debug-heap = ["sodigy-interpreter/debug-heap"]
