[package]
name = "sodigy-error"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-endec = { version = "0.1.0", path = "../endec" }
sodigy-name-analysis = { version = "0.1.0", path = "../name-analysis" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
sodigy-token = { version = "0.1.0", path = "../token" }
