[package]
name = "sodigy-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-parse = { version = "0.1.0", path = "../parse" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
sodigy-token = { version = "0.1.0", path = "../token" }
