[package]
name = "sodigy-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-endec = { version = "0.1.0", path = "../endec" }
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-fs-api = { version = "0.1.0", path = "../fs-api" }
sodigy-name-analysis = { version = "0.1.0", path = "../name-analysis" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-number-eval = { version = "0.1.0", path = "../number-eval" }
sodigy-parse = { version = "0.1.0", path = "../parse" }
sodigy-prettify = { version = "0.1.0", path = "../prettify" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
sodigy-token = { version = "0.1.0", path = "../token" }
