[package]
name = "sodigy-inter-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-endec = { version = "0.1.0", path = "../endec" }
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-hir = { version = "0.1.0", path = "../hir" }
sodigy-name-analysis = { version = "0.1.0", path = "../name-analysis" }
sodigy-prettify = { version = "0.1.0", path = "../prettify" }
sodigy-session = { version = "0.1.0", path = "../session" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
