[package]
name = "sodigy-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-bytecode = { version = "0.1.0", path = "../bytecode" }
sodigy-mir = { version = "0.1.0", path = "../mir" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-span = { version = "0.1.0", path = "../span" }

[features]
debug-bytecode = []
debug-heap = []
