[package]
name = "sodigy-lex"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-endec = { version = "0.1.0", path = "../endec" }
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-file = { version = "0.1.0", path = "../file" }
sodigy-fs-api = { version = "0.1.0", path = "../fs-api" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-prettify = { version = "0.1.0", path = "../prettify" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
sodigy-token = { version = "0.1.0", path = "../token" }
