[package]
name = "sodigy-lir"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-mir = { version = "0.1.0", path = "../mir" }
sodigy-name-analysis = { version = "0.1.0", path = "../name-analysis" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
sodigy-token = { version = "0.1.0", path = "../token" }
