[package]
name = "sodigy-mir"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-hir = { version = "0.1.0", path = "../hir" }
sodigy-name-analysis = { version = "0.1.0", path = "../name-analysis" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-string = { version = "0.1.0", path = "../string" }
