[package]
name = "sodigy-number-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-error = { version = "0.1.0", path = "../error" }
sodigy-number = { version = "0.1.0", path = "../number" }
sodigy-span = { version = "0.1.0", path = "../span" }
sodigy-token = { version = "0.1.0", path = "../token" }
