[package]
name = "sodigy-optimize"
version = "0.1.0"
edition = "2024"

[dependencies]
sodigy-bytecode = { version = "0.1.0", path = "../bytecode" }
sodigy-endec = { version = "0.1.0", path = "../endec" }
sodigy-mir = { version = "0.1.0", path = "../mir" }
sodigy-string = { version = "0.1.0", path = "../string" }
