[package]
name = "sodigy_ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.13.1"
sodigy_endec = { path = "../sodigy_endec" }
sodigy_error = { path = "../sodigy_error" }
sodigy_keyword = { path = "../sodigy_keyword" }
sodigy_lex = { path = "../sodigy_lex" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_parse = { path = "../sodigy_parse" }
sodigy_session = { path = "../sodigy_session" }
sodigy_span = { path = "../sodigy_span" }
sodigy_test = { path = "../sodigy_test" }
sodigy_uid = { path = "../sodigy_uid" }

[dev-dependencies]
sodigy_files = { path = "../sodigy_files" }
