[package]
name = "sodigy_clap"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11.2"
sodigy_files = { path = "../sodigy_files" }
sodigy_error = { path = "../sodigy_error" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_span = { path = "../sodigy_span" }
