[package]
name = "sodigy_clap"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmath = "0.1.17"
smallvec = "1.13.1"
sodigy_config = { path = "../sodigy_config" }
sodigy_files = { path = "../sodigy_files" }
sodigy_error = { path = "../sodigy_error" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_session = { path = "../sodigy_session" }
sodigy_span = { path = "../sodigy_span" }
