[package]
name = "sodigy_endec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11.1"
sodigy_files = { path = "../sodigy_files" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_keyword = { path = "../sodigy_keyword" }
sodigy_number = { path = "../sodigy_number" }
