[package]
name = "sodigy_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
sodigy_endec = { path = "../sodigy_endec" }
sodigy_files = { path = "../sodigy_files" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_span = { path = "../sodigy_span" }
