[package]
name = "sodigy_intern"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodigy_keyword = { path = "../sodigy_keyword" }
sodigy_number = { path = "../sodigy_number" }
sodigy_test = { path = "../sodigy_test" }
