[package]
name = "sodigy_interpreter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmath = "0.1.17"
sodigy_ast = { path = "../sodigy_ast" }
sodigy_high_ir = { path = "../sodigy_high_ir" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_number = { path = "../sodigy_number" }
sodigy_uid = { path = "../sodigy_uid" }
