[package]
name = "sodigy_mid_ir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.13.1"
sodigy_ast = { path = "../sodigy_ast" }
sodigy_endec = { path = "../sodigy_endec" }
sodigy_error = { path = "../sodigy_error" }
sodigy_high_ir = { path = "../sodigy_high_ir" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_session = { path = "../sodigy_session" }
sodigy_span = { path = "../sodigy_span" }
sodigy_uid = { path = "../sodigy_uid" }
