[package]
name = "sodigy_mid_ir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodigy_high_ir = { path = "../sodigy_high_ir" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_parse = { path = "../sodigy_parse" }
sodigy_span = { path = "../sodigy_span" }
sodigy_uid = { path = "../sodigy_uid" }
