[package]
name = "sodigy_parse"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11.2"
sodigy_endec = { path = "../sodigy_endec" }
sodigy_error = { path = "../sodigy_error" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_keyword = { path = "../sodigy_keyword" }
sodigy_lex = { path = "../sodigy_lex" }
sodigy_number = { path = "../sodigy_number" }
sodigy_span = { path = "../sodigy_span" }

[dev-dependencies]
sodigy_files = { path = "../sodigy_files" }
