[package]
name = "sodigy_session"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodigy_files = { path = "../sodigy_files" }
sodigy_endec = { path = "../sodigy_endec" }
sodigy_error = { path = "../sodigy_error" }
sodigy_intern = { path = "../sodigy_intern" }
sodigy_number = { path = "../sodigy_number" }
