[package]
name = "sodigy_span"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodigy_files = { path = "../sodigy_files" }
sodigy_endec = { path = "../sodigy_endec" }
sodigy_test = { path = "../sodigy_test" }
colored = "2.0.4"
